[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx-cc"
version = "0.3.6"
description = "Databricks Core - Admin Jobs Repository"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["databricks", "user", "jobs"]

dependencies = [
    "databricks-sdk>=0.18.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["dbx_cc_utils*"]

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=7.0.0",
    "databricks-bundles",
    "pandas>=3.0.0",
    "openpyxl"
]


[project.urls]
Homepage = "https://github.com/advarra-engineering/dbx-cc"
Repository = "https://github.com/advarra-engineering/dbx-cc"
Issues = "https://github.com/advarra-engineering/dbx-cc/issues"
